--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
             <%= link_to 'Chi tiết tài khoản', edit_user_path %>
           </li>
           <li>
-            <%= link_to 'Lịch sử giao dịch' %>
+            <%= link_to 'Lịch sử giao dịch', tickets_path %>
           </li>
         </ul>
       </div>
