--- a/app/assets/stylesheets/booking_tickets.scss
+++ b/app/assets/stylesheets/booking_tickets.scss
@@ -25,10 +25,9 @@
 }
 
 .time-select-btn {
-  border: 2px solid #FFFFFF;
   display: inline-block;
   padding: 10px;
-  border-radius: 30%;
+  border-radius: 25%;
   margin: 20px;
   text-align: center;
   font-size: 16px;
@@ -36,8 +35,10 @@
   font-family: Verdana, Arial, sans-serif;
   color: #222;
   line-height: 25px;
+  
   &:hover {
     border-color: #222;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   }
 }
 
@@ -61,18 +62,17 @@
   }
   .food-item {
     width:13%;
-    border: 8px solid #222;
-    border-radius: 25px;
+    border-radius: 12px;
     margin: 0 5px;
     display: inline-block;
     height: 30%;
     min-width: 200px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     img {
       clear: both;
       width: 100%;
-      border-radius: 15px;
+      border-radius: 15px 15px 0 0;
       margin-bottom: 20px;
-      border-bottom: 3px solid red;
     }
     .lower-area {
       height: 40%;
@@ -85,7 +85,7 @@
       }
       .quan-change {
         input {
-          width: 50%;
+          width: 30%;
           font-size: 25px;
           border-radius: 20%;
           text-align: center;
@@ -115,14 +115,20 @@
   background-color: #ffffff;
   margin-bottom: 8px;
   border-radius: 4px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
 }
 
 .right-side-order {
+  .md_div {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
   div {
     padding: 15px;
     background-color: #ffffff;
-    margin-bottom: 8px;
+    margin-bottom: 15px;
     border-radius: 4px;
+    border-radius: 10px;
     span {
       display: block;
     }
@@ -133,7 +139,7 @@
       font-size: 20px;
     }
   }
-  .btn {
+  .btn{
     font-weight: 600;
     font-size: 20px;
     height: auto;
@@ -142,4 +148,61 @@
 
 #total_food_price, #seat_price_right, #total_price_right {
   color: red;
+}
+
+.ticket-line {
+  width: 100%;
+  height: 50px;
+}
+
+.ticket-show-main {
+  max-width: 980px;
+  margin: 0 auto;
+  a {
+    font-size: 18px;
+    line-height: 20px;
+    margin: 5%;
+  }
+  .ticket-detail {
+    background-image: url("http://www.dunlaplibrary.org/dev/wp-content/uploads/2016/09/golden-ticket.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 500px;
+    padding: 60px 120px;
+    min-width: 980px;
+    h2 {
+      font-family: "Sofia", sans-serif;
+      color: #222;
+      width: 90%;
+      text-align: center;
+      margin-top: 0;
+      font-size: 50px;
+      margin-bottom: 40px;
+    }
+    span {
+      display: block;
+      color: #222;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 35px;
+    }
+    .ticket-detail-left {
+      width: 50%;
+      display: inline-block;
+      float: left;
+    }
+    .ticket-detail-right {
+      width: 50%;
+      display: inline-block;
+      .display-food-left {
+        width: 20%;
+        display: inline-block;
+      }
+      .display-food-right {
+        width: 80%;
+        float: right;
+        clear: both;
+      }
+    }    
+  }
 }
