--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -52,6 +52,8 @@ a:hover {
 
 .btn {
   background-color: #e71a0f !important;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+  border: none !important;
 }
 
 /* header */
