--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -14,9 +14,9 @@
 .movie-image {
   max-width: 100%;
   height: 277px;
-  border: 6px solid #000000;
   display: inline-table;
   border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .movie-info {
@@ -44,6 +44,7 @@
   background-color: white;
   border: 1px solid #e6e6e6;
   min-width: 564px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 .btn-search img {
@@ -88,6 +89,7 @@
   margin: 20px auto;
   font-size: 16px;
   color: #000000;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; 
 }
 
 .sort_link {
@@ -118,7 +120,7 @@
 
 .show-movie-details {
   padding-bottom: 10px;
-  max-width: 980px;
+  min-width: 980px;
   margin: 0 auto;
   #title-detail {
     border-bottom: 2px solid #222;
@@ -132,6 +134,7 @@
       height: 370px;
       img {
         width: 250px;
+        box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
       }
     }
     .movie-info {
@@ -177,4 +180,8 @@
     line-height: 20px;
     font-size: 15px;
   }
+}
+
+.btn-buy-ticket {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
