--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
             <%= link_to 'Chi tiết tài khoản', edit_user_path %>
           </li>
           <li>
-            <%= link_to 'Lịch sử giao dịch' %>
+            <%= link_to 'Lịch sử giao dịch', tickets_path %>
           </li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
               </div>
 
               <h5><strong>Ngày sinh</strong></h5>
-              <p><%= current_user.date_of_birth %></p>
+              <p><%= current_user.date_of_birth.strftime("%d-%m-%Y") %></p>
 
               <h5><strong>Email</strong></h5>
               <p><%= current_user.email %></p>
