--- a/app/assets/stylesheets/screens.scss
+++ b/app/assets/stylesheets/screens.scss
@@ -61,7 +61,8 @@ textarea {
 
 .seatStructure input[type=checkbox] {
   width:0px;
-  margin-right:18px;
+  margin-right:20px;
+  height: 30px;
 }
 
 .seatStructure input[type=checkbox]:before {
@@ -117,4 +118,17 @@ table {
 
 #hidden-part {
   display: none;
+}
+
+.seatStructure .seat_reserved input[type=checkbox]:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  vertical-align:middle;
+  text-align: center;
+  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+  background-color:#ccc;
+  border-radius: 35% 35% 0 0;
+  background-color: red;
 }
