--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,7 +10,8 @@
   background: url("https://www.cgv.vn/skin/frontend/cgv/default/images/bg-cgv/bg_h3_line.jpg") repeat-x scroll left center rgba(0, 0, 0, 0);
   height: 60px;
   text-align: center;
-  width: 100%;  
+  width: 100%; 
+  margin-bottom: 30px;
 }
 
 .home-movie-selection .home-title h2 {
@@ -59,4 +60,59 @@ body{
   display: inline-block;
   padding-right: 12px;
   animation: type .5s alternate infinite;
+}
+
+/* slider */
+.slider {
+  .movie_item_slide {
+    display: inline;
+    img {
+      border-radius: 30px;
+      width: 270px;
+      border: 2px solid #ddd;
+      padding: 2px;
+
+    }
+  }
+  button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+  .slick-prev {
+    left: -50px;
+  } 
+  button:before {
+    font-size: 45px;
+    color: #333;
+  }
+}
+
+.hidden_button{
+  background: url(https://www.cgv.vn/skin/frontend/cgv/default/images/bg-black-transparent.png) repeat scroll 0 0 #00000000;
+  padding-bottom: 10px;
+  position: absolute;
+  top: 270px;
+  border: 2px solid #ddd;
+  border-top: none; 
+  width: 270px;
+  z-index: 999;
+  border-radius: 0 0 30px 30px;
+  text-align: center;
+  min-height: 125px;
+  visibility: hidden;
+  transition:visibility 0.3ms linear,opacity 0.3ms linear;
+  h3 {
+    text-align: center;
+    color: #fff;
+    height: 50px;
+    transition:visibility 0.3ms linear,opacity 0.3ms linear;
+  }
+  a {
+    width: 40%;
+    transition:visibility 0.3ms linear,opacity 0.3ms linear;
+    height: 38px;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
 }
