--- a/app/views/booking_tickets/new.html.erb
+++ b/app/views/booking_tickets/new.html.erb
@@ -9,20 +9,20 @@
               <%= image_tag @movie.image_link, class: "img-thumbnail" %>
             </div>
             <div id="new-ticket" class="col-sm-9">
-              <h3><p><%= "Phim: " + @movie.title %></p></h3>
-              <h3><p><%= "Thoi luong: " + @movie.length.to_s + " phut" %></p></h3>
-              <h3><p><%= "Lich chieu phim: " + @show.start_time + " - " + @show.end_time %></p></h3>
+              <h3 style="color:#222;font-family: 'Sofia', sans-serif;font-size: 50px;"><p><%= @movie.title %></p></h3>
+              <h3><p><%= "Thời lượng: " + @movie.length.to_s + " phút" %></p></h3>
+              <h3><p><%= "Giờ chiếu phim: " + @show.start_time + " - " + @show.end_time %></p></h3>
             </div>
           </div>
           <div class="food-list">
-            <center><h2>Chon them do an</h2></center>
+            <center><h2>Đặt thêm đồ ăn</h2></center>
             <% @foods.each do |food| %>
             <div class="food-item">
               <%= image_tag food.image_link %>
               <div class="lower-area">
                 <center>
                   <span id="food_name"><%= food.name %></span>
-                  <span style="font-size: 20px;">Gia: <%= food.price %>.000 VND</span>
+                  <span style="font-size: 20px;">Giá: <%= food.price %>.000 VND</span>
                   <div class="quan-change">
                     <button class="btn btn-primary btn_decrease" data-field="<%= food.id %>" >-</button>
                     <input type="number" name="<%= food.id %>" class="food_quan" data-field="<%= food.id %>" value="0" min="0" data-price="<%= food.price %>" data-name="<%= food.name %>" >
@@ -38,10 +38,9 @@
 
       <div class="right-side-order col-sm-3">
         <div class="md_div" style="height: 130px;">
-          <h3>Thong tin ve</h3>
-          <div style="max-width: 35%;display: inline-block;padding: 0;">
-            <span style="float:right;">Ve da dat: </span>
-            <span style="float:right;">Thanh tien: </span>            
+          <h3>Thông tin vé</h3>
+          <div style="max-width: 35%;display: inline-block;padding: 0;margin-left: 10%;">
+            <span style="float:right;">Vé đã đặt: </span>
           </div>
           <div style="max-width: 65%;float: right;padding: 0 10px 10px 10px">
             <span style="float:left;" id="list_seat_right">0</span><br>
@@ -49,21 +48,20 @@
           </div>        
         </div>
         <div class="md_div" style="height: 140px;">
-          <h3>Thong tin do an</h3>
-          <div style="max-width: 35%;display: inline-block;padding: 0;">
-            <span style="float:right;">Do an: </span>
-            <span style="float:right;">Thanh tien: </span>            
+          <h3>Thông tin đồ ăn</h3>
+          <div style="max-width: 35%;display: inline-block;padding: 0;margin-left: 15%">
+            <span style="float:right;">Đồ ăn: </span><br><br><br>
           </div>
           <div style="max-width: 65%;float: right;padding: 0 10px 10px 10px">
-            <span style="float:left;" id="list_food">0</span><br>
+            <span style="float:left;" id="list_food">0</span><br><br><br>
             <span style="float:left;" id="total_food_price">0 VND</span>            
           </div>
         </div>
         <div class="md_div">
-          <h3>Thong tin do an</h3>
+          <h3>Thông tin thanh toán</h3>
           <div style="max-width: 35%;display: inline-block;padding: 0;">
-            <span style="float:right;">Giam gia: </span>
-            <span style="float:right;">Tong cong: </span>            
+            <span style="float:right;">Giảm giá: </span>
+            <span style="float:right;">Tổng cộng: </span>            
           </div>
           <div style="max-width: 65%;float: right;padding: 0 10px 10px 10px">
             <span style="float:left;">0</span><br>
@@ -78,7 +76,7 @@
           <%= form.hidden_field :total_food_price, id: "f_food_total" %>
           <%= form.hidden_field :food_ids, id: "f_food_ids" %>
           <%= form.hidden_field :food_quans, id: "f_food_quans" %>
-          <%= form.submit "Thanh toan", class: "btn btn-primary form-control" %>
+          <%= form.submit "Thanh toán", class: "btn btn-primary form-control" %>
         <% end -%>
       </div>
     </div>
@@ -96,7 +94,7 @@
   $("#f_seat_quan").val(num_seat);
   $("#f_seat_ids").val(list_seats);
 
-  $('#list_seat_right').html(list_seats + " (" + num_seat+ " ve)");
+  $('#list_seat_right').html(list_seats + " (" + num_seat+ " vé)");
   $('#seat_price_right').html(seat_price + ".000 VND");
 
   $(".btn_decrease").click(function(){
