--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
 
       <div class="header-career mn-myticket">
         <p>
-          <a href="#"><img src="https://www.cgv.vn/skin/frontend/cgv/default/images/bg-cgv/icon_ticket25.png">Vé Của Tôi</a>
+          <a href="<%= tickets_path %>"><img src="https://www.cgv.vn/skin/frontend/cgv/default/images/bg-cgv/icon_ticket25.png">Vé Của Tôi</a>
         </p>
       </div>
 
