--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Khôi phục mật khẩu") %>
+<% provide(:title, "Đặt lại mật khẩu") %>
 
 <h1 style="text-align: center;">Khôi phục mật khẩu</h1>
 
