--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Reset password') %>
+<% provide(:title, 'Đặt lại mật khẩu') %>
 
 <h1>Reset password</h1>
 
@@ -13,12 +13,12 @@
       </div>
 
       <div class="form-group">
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Xác nhận" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= f.submit "Cập nhật mật khẩu", class: "btn btn-primary" %>
       </div>
     <% end %>
   </div>
