--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,12 @@
               <% if current_user.avatar.attached? %>
                 <%= image_tag current_user.avatar, class:"avatar" %>
               <% else %>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" class="avatar">
+                <img
+                  src="
+                    https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png
+                  "
+                  class="avatar"
+                >
               <% end -%>
             </div>
           </div>
